# DnnTrigger

./: .gitattributes  .gitignore  CMakeLists.txt  build-armV8.sh  build-rpi.sh  build.sh  license-PFFFT-BSD-like.txt  license-libsndfile-LGPL-2.1.txt  license-minIni-Apache-2.0.txt  toolchain-install-ubuntu1604.sh  toolchain.arm.cmake  trg_win32.sln
Feat2Pass/: CMakeLists.txt  Feat2Pass.vcxproj  Feat2Pass.vcxproj.filters  Makefile  cmake_install.cmake
Feat2Pass/include/base/: base_lib.h  binary_io.h  byteorder.h  case.h  filename.h  genrand.h  glist.h  hash.h  hash_table.h  hci_macro.h  hci_malloc.h  hci_msg.h  hci_type.h  linklist.h  parse_config.h  str2words.h  utf8.h
Feat2Pass/include/basic_op/: basic_op.h  fixpoint.h  hci_logadd.h
Feat2Pass/include/common/: hci_asr_common.h  powerasr_const.h
Feat2Pass/include/epd/: epd_common.h  epd_main.h  hci_epd.h
Feat2Pass/include/mfcc2feat/: fx_agc.h  fx_cms.h  fx_compressframe.h  fx_delta.h  fx_dropframe.h  fx_mfcc2feat.h  fx_quantizer.h  hci_fx_mfcc2feat.h
Feat2Pass/include/wave2mfcc/: fx_hamming.h  fx_mfcc.h  fx_mfcc_common.h  fx_sigproc.h  hci_wave2mfcc.h
Feat2Pass/include/wiener/: BufferIn.h  MelProcExports.h  NoiseSup.h  NoiseSupExports.h  ParmInterface.h  ParmType.h  classifyFrame.h  computePCorr.h  dsrAfeVad.h  hci_wiener.h  pitchInterface.h  preProc.h  wiener_common.h  x_default.h
Feat2Pass/src/: pffft.c
Feat2Pass/src/base/: binary_io.c  case.c  filename.c  genrand.c  glist.c  hash.c  hash_table.c  hci_malloc.c  hci_msg.c  linklist.c  parse_config.c  str2words.c  utf8.c
Feat2Pass/src/basic_op/: basic_op.c
Feat2Pass/src/epd/: epd_main.c  hci_epd.c
Feat2Pass/src/mfcc2feat/: fx_agc.c  fx_cms.c  fx_compressframe.c  fx_delta.c  fx_dropframe.c  fx_mfcc2feat.c  fx_quantizer.c  hci_fx_mfcc2feat.c
Feat2Pass/src/wave2mfcc/: fx_hamming.c  fx_mfcc.c  fx_sigproc.c  hci_wave2mfcc.c
Feat2Pass/src/wiener/: BufferIn.c  MelProc.c  NoiseSup.c  ParmInterface.c  classifyFrame.c  computePCorr.c  dsrAfeVad.c  hci_wiener.c  pitch.c  preProc.c
FrontEnd/: CMakeLists.txt  FrontEnd.vcxproj  FrontEnd.vcxproj.filters  Makefile  cmake_install.cmake
FrontEnd/include/frontend/: hci_FrontEnd.h  powerdsr_frontend.h  wave_format.h
FrontEnd/include/hmm/: dtree.h  hci_resource_hmm.h  hmm_common.h  hmm_state_net.h  load_hmm.h  phoneseq2statenet.h  phoneseq2symbolseq.h
FrontEnd/include/lexicon/: hci_resource_lexicon.h  kor_g2p_res.h  lexicon_common.h  load_lexicon.h  text2lex.h
FrontEnd/include/phone_decoder/: hci_phone_decoder.h  phosearch_common.h
FrontEnd/include/speex/: config.h  hci_speex.h  ogg.h  os_support.h  os_types.h  speex_bits.h  speex_types.h
FrontEnd/include/state_oprob/: hci_state_oprob.h  oprob_common.h
FrontEnd/include/symbol_match/: hci_symbol_match.h  smatch_common.h
FrontEnd/include/verifier/: hci_result_verifier.h
FrontEnd/include/viterbi/: hci_viterbi_scorer.h  viterbi_common.h
FrontEnd/src/frontend/: hci_FrontEnd.c  powerdsr_frontend.c
FrontEnd/src/hmm/: dtree.c  hci_resource_hmm.c  load_hmm.c  phoneseq2statenet.c  phoneseq2symbolseq.c
FrontEnd/src/lexicon/: hci_resource_lexicon.c  load_lexicon.c  text2lex.c
FrontEnd/src/speex/: bits.c  bitwise.c  cb_search.c  filters.c  framing.c  hci_speex.c  lpc.c  lsp.c  ltp.c  modes.c  modes_wb.c  nb_celp.c  quant_lsp.c  sb_celp.c  speex.c  speex_callbacks.c  speex_header.c  stereo.c  vbr.c  vq.c  window.c
SDK/: DnnTrigger-Linux-aarch64.tgz
SDK/Android/: DNN_TRIGGER_SDK_Android_2018.09.05.7z  STT-SelvyWakeUpAndroidAPI.docx
SDK/Linux-aarch64/Sample/: CMakeLists.txt
SDK/Linux/SDK/include/: Selvy_Trigger_API.h
SDK/Linux/Sample/: CMakeLists.txt  main.cpp
dnn_trigger_decoder/: CMakeLists.txt  Makefile  Selvy_Trigger_API.cpp  Selvy_Trigger_API.h  SizedQueue.cpp  SizedQueue.h  cmake_install.cmake  detector_mono.cpp  detector_mono.h  detector_word.cpp  detector_word.h  dnn_decoder.cpp  dnn_decoder.h  dnn_decoder.sln  dnn_decoder.vcxproj  dnn_decoder.vcxproj.filters  dnn_trigger.cpp  dnn_trigger.h  feat_2pass.cpp  feat_2pass.h  mono_trigger.cpp  mono_trigger.h  trigger.h  구조체참고.txt  참고.txt
dnn_trigger_decoder/dnn_decoder/: dnn_decoder.vcxproj  dnn_decoder.vcxproj.filters
dnn_trigger_decoder/include/: PowerAI_BaseCommon.h  PowerAI_BaseCommon_Struct.h  PowerASR_DeepNet_struct.h  bp_struct.h  bp_train.h  deepnet_config.h  minIni.h
dnn_trigger_decoder/src/: bp_train.c  deepnet_base.c  deepnet_common.c  minIni.cpp
doc/: STT-SelvyWakeUpAndroidAPI.docx  Selvy WakeUp API C++Reference.docx  phoneme_자소매핑.xlsx
include/: clog.h
include/Linux/: Octopus.h
include/win32/: Octopus.h
lib/: 70-octopus.rules
lib/win32/: Octopus.lib
trg_android_SDK_with_sample/: settings.gradle
trg_android_SDK_with_sample/app/: build.gradle
trg_android_SDK_with_sample/app/src/main/: AndroidManifest.xml
trg_android_SDK_with_sample/selvywakeup/: CMakeLists.txt  build.gradle
trg_android_SDK_with_sample/selvywakeup/src/main/: AndroidManifest.xml
trg_android_SDK_with_sample/selvywakeup/src/main/cpp/: com_selvasai_stt_selvywakeup_WakeUpSolid.cpp
trg_android_SDK_with_sample/selvywakeup/src/main/java/com/selvasai/stt/selvywakeup/: AssetCopier.java
trg_android_tester/: settings.gradle
trg_android_tester/app/: build.gradle
trg_android_tester/app/src/main/: AndroidManifest.xml
trg_android_tester/selvywakeup/: CMakeLists.txt  build.gradle
trg_file_tester/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  trg_file_tester.vcxproj
trg_mfc/: ReadMe.txt  resource.h  stdafx.cpp  trg_mfc.cpp  trg_mfc.h  trg_mfc.rc  trg_mfc.vcxproj  trg_mfc.vcxproj.filters  trg_mfcDlg.cpp  trg_mfcDlg.h  trg_thread.cpp  trg_thread.h
trg_mfc/res/: trg_mfc.rc2
trg_mic_tester/: CMakeLists.txt  Makefile  cmake_install.cmake  trg_mic_tester.cpp  trg_win32_tester.vcxproj  trg_win32_tester.vcxproj.filters
trg_octo_tester/: CMakeLists.txt  main.cpp  trg_octo_tester.vcxproj
wakeup_android_sample/: build.gradle
wakeup_android_sample/gradle/wrapper/: gradle-wrapper.properties
wakeup_android_sample/selvywakeup/: build.gradle  selvywakeup-debug.aar  selvywakeup-release.aar
(+35 files in other folders)
